Center align fixed div & content

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -43,18 +43,39 @@ body {
       background: #f5f5f5;
       padding: 10px;
     }
-    .app-widget-content{
+    .app-widget-content {
       padding: 10px;
     }
   }
 }
 
-.generic-workflow{
-  display:none;
+.generic-workflow {
+  display: none;
   position: fixed;
   width: 100%;
   height: 100%;
-  top: 0;
-  left:0;
+  z-index: 2;
+}
+
+// TOOD: due to margin left % calculation will impact so revisit that logic
+.app-content-center {
+  top: 50%;
+  left: 50%;
+  position: absolute;
   transform: translate(-50%, -50%);
+  background: #FFF;
+  padding: 10px;
+  min-width: 80%;
+  min-height: 80%;
+  margin-left: $SIDE_BAR_WIDTH/2;
+}
+
+.app-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: $APP_OVERLAY_BACKGROUND;
+  opacity: $APP_OVERLAY_BACKGROUND_OPACITY;
 }
